# osmium

./: Cargo.toml  README.md
.cargo/: config.toml
src/: allocator.rs  color.rs  gdt.rs  main.rs  memory.rs  panic.rs  write.rs
src/commands/: command.rs  echo.rs  exit.rs  handler.rs  mod.rs  time.rs
src/events/: keyboard.rs
src/interrupts/: breakpoint.rs  double_fault.rs  keyboard.rs  mod.rs  page_fault.rs  setup.rs  timer.rs
src/terminal/: color.rs  input.rs  mod.rs  output.rs  screen_char.rs  vga_text.rs
src/utils/: mod.rs  qemu.rs  time.rs  write_macros.rs
