[package]
name = "osmium"
version = "0.1.0"
edition = "2021"

[profile.dev]
# panic = "abort" # Comment this when running `cargo test` 


[profile.release]
panic = "abort"

[package.metadata.bootimage]
# This allows us to exit out of QEMU when testing
test-success-exit-code = 33                                       # (0x10 << 1) | 1
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]

[dependencies]
bootloader = "0.9.23"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
pc-keyboard = "0.7.0"
pic8259 = "0.10.4"
spin = "0.9.8"
uart_16550 = "0.3.0"
x86_64 = "0.14.11"
